--- a/FrontEnd/public/assets/css/style.css
+++ b/FrontEnd/public/assets/css/style.css
@@ -1293,8 +1293,8 @@ select:focus {
 }
 .hero-area.hero-area2.hero-area4 {
   background: url(../images/home/h4.jpg);
-  background-size: cover;
-  background-position: center;
+  background-size: inherit;
+  /* background-position: center; */
   background-repeat: no-repeat;
   position: relative;
 }
