--- a/FrontEnd/src/assets/scss/dashboard/Dashboard.scss
+++ b/FrontEnd/src/assets/scss/dashboard/Dashboard.scss
@@ -131,7 +131,7 @@
       align-items: center;
       justify-content: center;
       margin: auto;
-      // margin-top: 230px;
+      margin-bottom: 190px;
 
      .right {
          flex-direction: column;
